implement basic comment
